@@ -48,8 +48,34 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation 'org.testcontainers:testcontainers'
+	testImplementation 'org.testcontainers:postgresql'
 }
 
 test {
 	useJUnitPlatform()
+
+	jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
+
+	testLogging {
+		events("passed", "skipped", "failed")
+		exceptionFormat = "full"
+
+		lifecycle {
+			showStandardStreams = true
+		}
+	}
+
+	afterSuite { desc, result ->
+		if (!desc.parent) {
+			println "--------------------------------------------------"
+			println "Тестов всего: ${result.testCount}"
+			println "Успешно:      ${result.successfulTestCount}"
+			println "Провалено:    ${result.failedTestCount}"
+			println "Пропущено:    ${result.skippedTestCount}"
+			println "Результат:    ${result.resultType}"
+			println "--------------------------------------------------"
+		}
+	}
 }
